third_party/move/move-compiler-v2/tests/checking/naming/other_builtins_invalid.exp

Diagnostics:
error: invalid call of `freeze`: generic count mismatch (expected 1 but found 2)
  ┌─ tests/checking/naming/other_builtins_invalid.move:3:9
  │
3 │         freeze<u64, bool>(x);
  │         ^^^^^^^^^^^^^^^^^^^^

error: invalid call of `freeze`: generic count mismatch (expected 1 but found 0)
  ┌─ tests/checking/naming/other_builtins_invalid.move:4:9
  │
4 │         freeze<>(x);
  │         ^^^^^^^^^^^

error: assert macro must have two arguments
  ┌─ tests/checking/naming/other_builtins_invalid.move:5:16
  │
5 │         assert!();
  │                ^^

error: assert macro must have two arguments
  ┌─ tests/checking/naming/other_builtins_invalid.move:6:16
  │
6 │         assert!(false);
  │                ^^^^^^^

error: assert macro must have two arguments
  ┌─ tests/checking/naming/other_builtins_invalid.move:7:16
  │
7 │         assert!(0 != 1);
  │                ^^^^^^^^
